# GeneralsGameCode

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-lock.json
.github/: copilot-instructions.md
.github/workflows/: build-toolchain.yml  check-replays.yml  ci.yml  weekly-release.yml
Core/GameEngine/: CMakeLists.txt
Core/GameEngineDevice/: CMakeLists.txt
Core/Libraries/Source/WWVegas/WWLib/: BSEARCH.H  BSEARCH.h  BUFF.H  BUFF.h  CMakeLists.txt  CRC.H  CallbackHook.h  DbgHelpGuard.cpp  DbgHelpGuard.h  DbgHelpLoader.cpp  DbgHelpLoader.h  Except.cpp  Except.h  FastAllocator.h  HASHLIST.H  HASHLIST.h  INDEX.H  INDEX.h  INI.H  INI.h  LISTNODE.H  LISTNODE.h  MPU.H  PIPE.H  PIPE.h  Point.h  RAMFILE.H  RAMFILE.h  RANDOM.H  RANDOM.h  RAWFILE.H  RAWFILE.h  SLIST.H  SLIST.h  SLNODE.H  SLNODE.h  STLUtils.h  STRAW.H  STRAW.h  Signaler.h  (+119 more)
Core/Tools/Autorun/: ARGS.H  ARGS.cpp  CDCNTRL.H  CDCNTRL.cpp  CDCNTRL.h  CMakeLists.txt  CallbackHook.h  DrawButton.cpp  DrawButton.h  GETCD.cpp  GameText.cpp  GameText.h  GetCD.h  JSUPPORT.h  Jsupport.cpp  Locale_API.cpp  Locale_API.h  POINT.h  RECT.h  TTFont.cpp  TTFont.h  Utils.cpp  Utils.h  ViewHTML.h  WSYS_FileSystem.h  WSYS_RAMFile.cpp  WSYS_RAMFile.h  WSYS_StdFile.h  WSYS_StdFileSystem.h  WSYS_file.h  WinFix.H  WinFix.cpp  WinFix.h  Wnd_File.h  Wnd_file.cpp  autorun.cpp  autorun.h  gimex.h  leanAndMeanAutorun.h  locale.h
Core/Tools/Babylon/: Babylon.h  BabylonDlg.cpp  BabylonDlg.h  DlgProxy.h  ExportDlg.h  GenerateDlg.h  MatchDlg.h  ProceedDlg.h  Report.h  RetranslateDlg.h  StdAfx.h  TransDB.h  VIEWDBSII.h  VerifyDlg.h  VerifyTextDlg.h  XLStuff.cpp  XLStuff.h  bin.h  expimp.h  fileops.h  iff.h  list.h  loadsave.cpp  loadsave.h  olestring.h  transcs.h
Core/Tools/CRCDiff/: KVPair.cpp  KVPair.h  debug.h  expander.cpp  expander.h  misc.h
Core/Tools/Compress/: Compress.cpp
Core/Tools/DebugWindow/: DebugWindow.h  StdAfx.h
Core/Tools/ImagePacker/: CMakeLists.txt
Core/Tools/Launcher/: BFISH.cpp  BFISH.h  CMakeLists.txt  configfile.h  dialog.h  dictionary.h  filed.h  findpatch.cpp  findpatch.h  loadbmp.h  monod.h  patch.h  process.h  streamer.h  wdebug.h  winblows.h  wstring.cpp  wstring.h  wstypes.h
Core/Tools/Launcher/DatGen/: CMakeLists.txt  DatGen.cpp
Core/Tools/MapCacheBuilder/: CMakeLists.txt
Core/Tools/PATCHGET/: CHATAPI.CPP  CHATAPI.H  CHATAPI.cpp  CHATAPI.h  CMakeLists.txt  COMINIT.H  COMINIT.cpp  DownloadManager.cpp  DownloadManager.h  PROCESS.H  PROCESS.h  Registry.h  WINBLOWS.H  WINBLOWS.cpp  WINBLOWS.h  WSTYPES.h  debug.h
Core/Tools/W3DView/: AddToLineupDialog.h  AdvancedAnimSheet.cpp  AdvancedAnimSheet.h  AggregateNameDialog.h  AmbientLightDialog.h  AnimMixingPage.h  AnimReportPage.cpp  AnimReportPage.h  AnimatedSoundOptionsDialog.cpp  AnimatedSoundOptionsDialog.h  AnimationPropPage.h  AnimationSpeed.h  AssetInfo.cpp  AssetInfo.h  AssetPropertySheet.h  AssetTypes.h  BackgroundBMPDialog.h  BackgroundColorDialog.h  BackgroundObjectDialog.h  BoneMgrDialog.cpp  BoneMgrDialog.h  CMakeLists.txt  ColorBar.h  (+87 more)
Dependencies/MaxSDK/: README.md
Generals/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  aabtreebuilder.cpp  aabtreebuilder.h  animobj.cpp  animobj.h  assetmgr.cpp  assetmgr.h  bmp2d.h  boxrobj.cpp  boxrobj.h  camera.h  dazzle.cpp  dazzle.h  ddsfile.cpp  ddsfile.h  decalmsh.h  dx8caps.cpp  dx8caps.h  dx8fvf.h  dx8indexbuffer.h  dx8renderer.cpp  dx8renderer.h  dx8texman.cpp  dx8texman.h  dx8vertexbuffer.h  dx8wrapper.cpp  dx8wrapper.h  hanimmgr.cpp  hanimmgr.h  hlod.cpp  hlod.h  hmorphanim.cpp  hmorphanim.h  hrawanim.cpp  hrawanim.h  htreemgr.cpp  htreemgr.h  light.h  lightenvironment.h  mapper.cpp  (+43 more)
Generals/Code/Libraries/Source/WWVegas/WWDebug/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/WWDownload/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/WWMath/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/WWSaveLoad/: CMakeLists.txt
Generals/Code/Libraries/Source/WWVegas/Wwutil/: CMakeLists.txt
GeneralsMD/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/EABrowserDispatch/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  aabtreebuilder.cpp  aabtreebuilder.h  animobj.cpp  animobj.h  assetmgr.cpp  assetmgr.h  bmp2d.h  boxrobj.cpp  boxrobj.h  camera.h  dazzle.cpp  dazzle.h  ddsfile.cpp  ddsfile.h  decalmsh.h  dx8caps.cpp  dx8caps.h  dx8fvf.h  dx8indexbuffer.h  dx8renderer.cpp  dx8renderer.h  dx8rendererdebugger.h  dx8texman.cpp  dx8texman.h  dx8vertexbuffer.h  dx8wrapper.cpp  dx8wrapper.h  hanimmgr.cpp  hanimmgr.h  hlod.cpp  hlod.h  hmorphanim.cpp  hmorphanim.h  hrawanim.cpp  hrawanim.h  htreemgr.cpp  htreemgr.h  light.h  lightenvironment.h  (+49 more)
GeneralsMD/Code/Libraries/Source/WWVegas/WWDebug/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WWDownload/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WWLib/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/WWSaveLoad/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/Wwutil/: CMakeLists.txt
GeneralsMD/Code/Libraries/Source/WWVegas/wwshade/: CMakeLists.txt
GeneralsMD/Code/Tools/CRCDiff/: CMakeLists.txt
GeneralsMD/Code/Tools/DebugWindow/: CMakeLists.txt
GeneralsMD/Code/Tools/Launcher/DatGen/: CMakeLists.txt
GeneralsMD/Code/Tools/W3DView/: CMakeLists.txt
GeneralsMD/Code/Tools/mangler/: CMakeLists.txt
GeneralsMD/Code/Tools/timingTest/: CMakeLists.txt
GeneralsMD/Code/Tools/wolSetup/: CMakeLists.txt
cmake/: config-build.cmake
common/: defines.hpp
generals/: CMakeLists.txt
generals/src/: generated.hpp.in  main.cpp
scripts/cpp/: apply_code_formatting.py  harmonize_linebreaks_pragmaonce.py  refactor_asciistring_unicodestring_instantiation.py  remove_duplicate_include_directives.py  remove_include_guards_pragma.py  remove_mscver_from_pragma.py  replace_include_guards_with_pragma.py  unify_move_files.py
(+3454 files in other folders)
